Ajustando docs e API
